fix(shs-6442): fix width of stretched vertical linked cards in grid

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-linked-card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-linked-card.scss
@@ -60,6 +60,7 @@
   // Stretched vertical linked cards inside a grid.
   .hb-stretch-vertical-linked-cards .hb-grid__item & {
     align-self: stretch;
+    width: 100%;
   }
 
   &__img {
